{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 98,
  "lineage": "3913268f-4c62-3857-f970-7d72d136f235",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ee613fe06bbd40bc",
            "association_id": "eipassoc-03c04af51ca199d32",
            "domain": "vpc",
            "id": "eipalloc-0ee613fe06bbd40bc",
            "instance": "i-0274d65a5884183a4",
            "network_border_group": "ap-southeast-2",
            "network_interface": "eni-0ad05ad5f2e97e5aa",
            "private_dns": "ip-10-1-0-224.ap-southeast-2.compute.internal",
            "private_ip": "10.1.0.224",
            "public_dns": "ec2-13-210-97-136.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "13.210.97.136",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_db_instance.wordpressdb",
            "aws_db_subnet_group.RDS_subnet_grp",
            "aws_instance.wordpressec2",
            "aws_key_pair.wp-key",
            "aws_security_group.RDS_allow_rule",
            "aws_security_group.ec2_allow_rule",
            "aws_subnet.prod-private-subnet",
            "aws_subnet.prod-public-subnet",
            "aws_vpc.prod-vpc",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpressec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00aa03f67b64f75dd",
            "arn": "arn:aws:ec2:ap-southeast-2:062714976861:instance/i-0274d65a5884183a4",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0274d65a5884183a4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "wp-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ad05ad5f2e97e5aa",
            "private_dns": "ip-10-1-0-224.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.0.224",
            "public_dns": "ec2-3-26-67-52.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "3.26.67.52",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0657e91c5f69a7402",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0b4e3255810a6be27"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0329a50f8897b478f",
            "tags": {
              "Name": "Wordpress.web"
            },
            "tags_all": {
              "Name": "Wordpress.web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b4e3255810a6be27"
            ]
          },
          "dependencies": [
            "aws_db_instance.wordpressdb",
            "aws_db_subnet_group.RDS_subnet_grp",
            "aws_key_pair.wp-key",
            "aws_security_group.RDS_allow_rule",
            "aws_security_group.ec2_allow_rule",
            "aws_subnet.prod-private-subnet",
            "aws_subnet.prod-public-subnet",
            "aws_vpc.prod-vpc",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prod-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:062714976861:internet-gateway/igw-0ed1f63bcf2b0e72c",
            "id": "igw-0ed1f63bcf2b0e72c",
            "owner_id": "062714976861",
            "tags": {
              "Name": "wordpress-igw"
            },
            "tags_all": {
              "Name": "wordpress-igw"
            },
            "vpc_id": "vpc-06dcbf519cc669ba1"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod-public-crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:062714976861:route-table/rtb-02a6ef8c110b41809",
            "id": "rtb-02a6ef8c110b41809",
            "owner_id": "062714976861",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ed1f63bcf2b0e72c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wordpress-crt"
            },
            "tags_all": {
              "Name": "wordpress-crt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06dcbf519cc669ba1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.prod-igw",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod-crta-public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c13958dae8933603",
            "route_table_id": "rtb-02a6ef8c110b41809",
            "subnet_id": "subnet-0329a50f8897b478f"
          },
          "dependencies": [
            "aws_internet_gateway.prod-igw",
            "aws_route_table.prod-public-crt",
            "aws_subnet.prod-public-subnet",
            "aws_vpc.prod-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "RDS_allow_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:062714976861:security-group/sg-028e7afb0ba2f470d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-028e7afb0ba2f470d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b4e3255810a6be27"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20221011103129206400000003",
            "name_prefix": "terraform-",
            "owner_id": "062714976861",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wordpress-RDS-sg"
            },
            "tags_all": {
              "Name": "wordpress-RDS-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06dcbf519cc669ba1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ec2_allow_rule",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_allow_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:062714976861:security-group/sg-0b4e3255810a6be27",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b4e3255810a6be27",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MYSQL/Aurora",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20221011103127874300000001",
            "name_prefix": "terraform-",
            "owner_id": "062714976861",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wordpress-ec2-sg"
            },
            "tags_all": {
              "Name": "wordpress-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06dcbf519cc669ba1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:062714976861:subnet/subnet-01fac6dced9614545",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01fac6dced9614545",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "062714976861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "RDS-Private-Subnet-0"
            },
            "tags_all": {
              "Name": "RDS-Private-Subnet-0"
            },
            "vpc_id": "vpc-06dcbf519cc669ba1"
          },
          "dependencies": [
            "aws_vpc.prod-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:062714976861:subnet/subnet-099bd6aa828cd8c27",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099bd6aa828cd8c27",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "062714976861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "RDS-Private-Subnet-1"
            },
            "tags_all": {
              "Name": "RDS-Private-Subnet-1"
            },
            "vpc_id": "vpc-06dcbf519cc669ba1"
          },
          "dependencies": [
            "aws_vpc.prod-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:062714976861:subnet/subnet-0329a50f8897b478f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0329a50f8897b478f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "062714976861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "RDS-Public-Subnet-1"
            },
            "tags_all": {
              "Name": "RDS-Public-Subnet-1"
            },
            "vpc_id": "vpc-06dcbf519cc669ba1"
          },
          "dependencies": [
            "aws_vpc.prod-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:062714976861:vpc/vpc-06dcbf519cc669ba1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0bd7fa77595e79351",
            "default_route_table_id": "rtb-0dce70e0d921d60b1",
            "default_security_group_id": "sg-04b308415f220fb97",
            "dhcp_options_id": "dopt-8a6689e2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06dcbf519cc669ba1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dce70e0d921d60b1",
            "owner_id": "062714976861",
            "tags": {
              "Name": "wordpress-VPC"
            },
            "tags_all": {
              "Name": "wordpress-VPC"
            }
          }
        }
      ]
    }
  ]
}